# nebula-pad-firmware-customizer

./: .gitignore  .license-tools-config.json  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
assets/root/: installer.sh
templates/: ota_info.tmpl
utils/: __init__.py  downloader.py  otatools.py  prepareroot.py
